--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Vector2D.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="matplotlibcpp.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
