--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
@@ -39,6 +39,15 @@
     <ClInclude Include="matplotlibcpp.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CurvesMath.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Setups.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
