Метод Гаусса и прямое умножение
Реализовал метод Гаусса и прямое умножение собственного класса матриц, для нахождения решения систем линейных уравнений

--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClInclude Include="BezierCurve.h" />
     <ClInclude Include="CurvesMath.h" />
+    <ClInclude Include="Gauss_math.h" />
     <ClInclude Include="matplotlibcpp.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="MyMath.h" />
