--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Matrix.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Gauss_math.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
