--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="matplotlibcpp.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="MyMath.h" />
+    <ClInclude Include="Objective_function.h" />
     <ClInclude Include="Setups.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
