--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="Objective_function.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="IFunction.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Curvature.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
