--- a/CurvesMath/CurvesMath/CurvesMath.vcxproj
+++ b/CurvesMath/CurvesMath/CurvesMath.vcxproj
@@ -158,7 +158,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BezierCurve.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Condition.h" />
     <ClInclude Include="CurvesMath.h" />
+    <ClInclude Include="FishBone.h" />
     <ClInclude Include="Gauss_math.h" />
     <ClInclude Include="IFunction.h" />
     <ClInclude Include="matplotlibcpp.h" />
@@ -166,13 +169,16 @@
     <ClInclude Include="MyMath.h" />
     <ClInclude Include="Objective_function.h" />
     <ClInclude Include="Setups.h" />
+    <ClInclude Include="SidesFunction.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="temp.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Vertex2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="CurvesMath.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
